<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_demo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mit.alibaba.nuidemo.DialogActivity">

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="27dp"
        android:enabled="false"
        android:text="开始" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_start"
        android:layout_alignBottom="@+id/button_start"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="13dp"
        android:enabled="true"
        android:text="停止" />

    <Switch
        android:id="@+id/translation_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_start"
        android:layout_alignLeft="@+id/button_start"
        android:layout_marginTop="10dp"
        android:text="关闭翻译功能" />

    <Switch
        android:id="@+id/save_audio_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_cancel"
        android:layout_alignRight="@id/button_cancel"
        android:layout_marginTop="10dp"
        android:text="音频保存" />

    <LinearLayout
        android:id="@+id/layout_params0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/translation_switch"
        android:orientation="horizontal"
        android:visibility="invisible">

        <Spinner
            android:id="@+id/set_src_lan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/trans_src_language" />

        <TextView
            android:id="@+id/lanFlagText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="-->" />

        <Spinner
            android:id="@+id/set_dst_lan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/trans_dst_language" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_params"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_params0"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/set_sample_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/file_trans_sample_rate"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/set_format"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/file_trans_format"
            android:spinnerMode="dialog" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_params2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_params"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/set_model"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/speech_trans_format"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <TextView
        android:id="@+id/asrText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_params2"
        android:layout_alignStart="@+id/button_start"
        android:layout_marginTop="10dp"
        android:text="识别内容"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/transText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/asrText"
        android:layout_alignStart="@+id/button_start"
        android:layout_marginTop="20dp"
        android:scrollbars="vertical"
        android:text="翻译内容" />

    <TextView
        android:id="@+id/responseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/transText"
        android:layout_alignStart="@+id/button_start"
        android:layout_marginTop="20dp"
        android:scrollbars="vertical"
        android:text="响应文本" />

    <!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/button_start"-->
<!--        android:layout_marginTop="100dp"-->
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:orientation="vertical">-->

<!--            <TextView-->
<!--                android:layout_marginTop="192dp"-->
<!--                android:id="@+id/textView"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="识别文本" />-->
<!--        </LinearLayout>-->
<!--    </ScrollView>-->

</RelativeLayout>
